@@ -1,5 +1,6 @@
 Changelog for HLint
 
+    import qualified Char ==> import qualified Data.Char as Char
     #393, fix suggestion for import IO, requires more than System.IO
     #376, note that RecordWildCards implies DisambiguateRecordFields
 1.8.3
